--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/vertical_margin"
     android:layout_marginStart="@dimen/vertical_margin"
-    android:layout_marginTop="@dimen/horizontal_margin"
+    android:layout_marginTop="@dimen/horizontal_margin_short"
+    android:layout_marginBottom="@dimen/horizontal_margin_short"
     app:cardCornerRadius="40dp"
     app:cardElevation="2dp">
 
@@ -23,14 +24,16 @@
                 android:id="@+id/group_user_image"
                 android:layout_width="50dp"
                 android:layout_height="60dp"
-                android:layout_margin="@dimen/horizontal_margin_short"
+                android:layout_marginBottom="@dimen/horizontal_margin_short"
+                android:layout_marginStart="@dimen/vertical_margin"
+                android:layout_marginTop="@dimen/horizontal_margin_short"
                 android:src="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/group_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/vertical_margin_short"
+                android:layout_marginStart="@dimen/vertical_margin"
                 android:text="Jane H."
                 android:textSize="20sp" />
 
@@ -41,25 +44,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/horizontal_margin_short"
-            android:layout_marginEnd="@dimen/vertical_margin_short"
-            android:layout_marginStart="@dimen/vertical_margin_short"
-            android:text=" is simply dummy text of the printing and typesetting industry. "
+            android:layout_marginEnd="@dimen/vertical_margin"
+            android:layout_marginStart="@dimen/vertical_margin"
+            android:text="@string/text1"
             android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/group_post_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_background" />
-
+            android:maxHeight="200dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/horizontal_margin_short"
             android:layout_marginEnd="@dimen/vertical_margin"
             android:layout_marginStart="@dimen/vertical_margin"
             android:layout_marginTop="@dimen/horizontal_margin_short"
-            android:layout_marginBottom="@dimen/horizontal_margin_short"
             android:gravity="center_vertical">
 
             <ImageView
