--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,31 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
+    <style name="EditText_style">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/edit_text_drawable</item>
+        <item name="android:layout_marginBottom">@dimen/horizontal_margin_short</item>
+        <item name="android:layout_marginTop">@dimen/activity_horizontal_margin</item>
+
+    </style>
+
+    <style name="Button_style">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/button_drawable</item>
+        <item name="android:layout_marginBottom">@dimen/horizontal_margin_short</item>
+        <item name="android:layout_marginTop">@dimen/activity_horizontal_margin</item>
+
+    </style>
 </resources>
