--- a/app/src/main/res/layout/activity_stages.xml
+++ b/app/src/main/res/layout/activity_stages.xml
@@ -90,7 +90,9 @@
         </RadioGroup>
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/button_next"
+            style="@style/Button_style"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
