--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     </style>
 
     <style name="Button_style">
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">20sp</item>
         <item name="android:layout_width">300dp</item>
         <item name="android:layout_height">50dp</item>
