--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,7 +6,8 @@
     <ImageView
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="263dp"
+        android:layout_height="280dp"
+        android:scaleType="centerCrop"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:src="@mipmap/header" />
@@ -67,7 +68,6 @@
 
         </LinearLayout>
 
-
     </LinearLayout>
 
 
@@ -77,8 +77,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/twitter_icon"
-        android:layout_marginBottom="@dimen/horizontal_margin_short"/>
+        android:layout_marginBottom="@dimen/horizontal_margin_short"
+        android:src="@mipmap/twitter_icon" />
 
     <ImageView
         android:id="@+id/gmail_icon"
@@ -87,9 +87,7 @@
         android:layout_alignBottom="@id/twitter_icon"
         android:layout_alignTop="@id/twitter_icon"
         android:layout_toRightOf="@id/twitter_icon"
-        android:src="@mipmap/gmail_icon"
-
-        />
+        android:src="@mipmap/gmail_icon" />
 
 
     <ImageView
@@ -99,8 +97,6 @@
         android:layout_alignBottom="@id/twitter_icon"
         android:layout_alignTop="@id/twitter_icon"
         android:layout_toLeftOf="@id/twitter_icon"
-        android:src="@mipmap/facebook_icon"
-
-        />
+        android:src="@mipmap/facebook_icon" />
 
 </RelativeLayout>
