--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -36,7 +36,8 @@
 
         <Button
             style="@style/Button_style"
-            android:text="@string/login" />
+            android:text="@string/login"
+            android:onClick="login"/>
 
 
         <LinearLayout
