--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#b1004c</color>
     <color name="colorAccent">#e93d77</color>
     <color name="gray">#c7c4c4</color>
+    <color name="gray_dark">#a6a1a1</color>
 </resources>
