--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/header"
+        android:layout_marginTop="@dimen/horizontal_margin"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -27,8 +28,8 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-        <EditText
 
+        <EditText
             android:id="@+id/userName_editText"
             style="@style/EditText_style"
             android:drawablePadding="@dimen/horizontal_margin_short"
@@ -87,13 +88,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/linearLayout"
             android:layout_centerHorizontal="true"
-            android:onClick="register"
+            android:onClick="clickToSignUp"
             android:text="Not Registered ? Click here"
             android:textSize="16sp" />
 
 
         <LinearLayout
-
+            android:id="@+id/or_view"
+            android:layout_marginTop="@dimen/horizontal_margin"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:orientation="horizontal">
@@ -126,21 +128,23 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_below="@id/linearLayout"
+        android:layout_marginTop="@dimen/horizontal_margin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/horizontal_margin">
 
         <ImageView
             android:id="@+id/twitter_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/horizontal_margin_short"
             android:src="@mipmap/twitter_icon" />
 
         <ImageView
             android:id="@+id/gmail_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignBottom="@id/twitter_icon"
             android:layout_alignTop="@id/twitter_icon"
             android:layout_marginLeft="8dp"
@@ -150,8 +154,8 @@
 
         <ImageView
             android:id="@+id/facebook_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignBottom="@id/twitter_icon"
             android:layout_alignTop="@id/twitter_icon"
             android:layout_marginLeft="8dp"
