--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/horizontal_margin"
+        android:layout_marginBottom="@dimen/horizontal_margin"
         android:contentDescription="@string/login"
         android:scaleType="center"
         android:src="@mipmap/logo" />
@@ -169,6 +170,7 @@
     </RelativeLayout>
 
     <Button
+        android:onClick="signUp"
         style="@style/Button_style"
         android:text="@string/creat_account" />
 
@@ -176,13 +178,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/horizontal_margin"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
 
         <ImageView
             android:id="@+id/twitter_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/horizontal_margin_short"
             android:layout_marginLeft="8dp"
@@ -191,8 +194,8 @@
 
         <ImageView
             android:id="@+id/gmail_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignBottom="@id/twitter_icon"
             android:layout_alignTop="@id/twitter_icon"
             android:layout_marginLeft="8dp"
@@ -203,8 +206,8 @@
 
         <ImageView
             android:id="@+id/facebook_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignBottom="@id/twitter_icon"
             android:layout_alignTop="@id/twitter_icon"
             android:layout_marginLeft="8dp"
